discord-frontend/hartex-discord-commands-test/tests/ui/identifier_parameter.stderr
error: expected identifier; found `"literal"`
  --> tests/ui/identifier_parameter.rs:26:31
   |
26 | #[metadata(interaction_only = "literal")]
   |                               ^^^^^^^^^
